DevTools: enable only one DevToolsURLRequestInterceptor per BrowserContext

Bug: 811385,764505
Change-Id: I924aa64f71b2012f21ce0dc7e309cf354bbeb6e4
Reviewed-on: https://chromium-review.googlesource.com/c/1391678
Commit-Queue: Andrey Kosyakov <caseq@chromium.org>
Reviewed-by: Dmitry Gozman <dgozman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#619186}
Former-commit-id: 4c806b8b802c5bcd93831229bedd8164d8a68a26